--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,12 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+} */
+.rounded-image {
+  /* border-radius: 50% 300px 0% 50%; Top left corner rounded */
+  border-top-left-radius: 50%;
+  border-bottom-left-radius: 30%;
 }
-
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
